# Vox-Fusion-530

./: .gitignore  .pre-commit-config.yaml  .projectile  README.md  pyproject.toml
configs/ethl/: ethl.yaml  ethl1.yaml  ethl1_global_nonoise.yaml  ethl1_nonoise.yaml  ethl2.yaml  ethl2_global.yaml
configs/replica/: office_2.yaml  office_3.yaml  office_4.yaml  office_4_global.yaml  office_4_local.yaml  replica.yaml  room_0.yaml  room_0_global.yaml  room_0_local.yaml  room_1.yaml  room_2.yaml
configs/replica_robust/: office_0.yaml  office_0_global.yaml  office_1.yaml  office_2.yaml  office_3.yaml  office_4.yaml  office_4_global.yaml  office_4_local.yaml  replica.yaml  room_0.yaml  room_0_global.yaml  room_0_local.yaml  room_1.yaml  room_2.yaml
demo/: parser.py  run.py  view.py  vis_utils.py
src/: criterion.py  frame.py  loggers.py  mapping.py  se3pose.py  share.py  tracking.py  visualization.py  voxslam.py
src/dataset/: arkit.py  ethl.py  replica.py  scannet.py
src/utils/: import_util.py  mesh_util.py  sample_util.py
src/variations/: nrgbd.py  render_helpers.py  voxel_helpers.py
utils/: ckpt_playground.py  eval_mesh.py  eval_track.py  global_illumination.ipynb  illumination_change.ipynb  local_illumination.ipynb  rerender_replica.py
